--- a/DX.BlazorStateMgtDemo/Pages/Grid.razor
+++ b/DX.BlazorStateMgtDemo/Pages/Grid.razor
@@ -3,7 +3,7 @@
 @using DX.BlazorStateMgtDemo.Data
 @inject WeatherForecastService ForecastService
 
-<h2>Cascading Parameter</h2>
+<h2>Without State management</h2>
 
 <p class="pb-2 pt-2 mw-1100">The DevExpress Grid for Blazor allows you to display and manage data via a tabular (rows/columns) UI metaphor.
 This page uses our Blazor Grid component to display weather forecast values.</p>
